<resources>
    <string name="app_name">ARTS</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_invite">Invite_friends</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>

    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Wallet</item>
        <item>Offer</item>
        <item>Profile</item>
        <item>Notifications</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="FAQs">FAQs</string>
    <string name="Feedback">Feedback</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>

</resources>
