<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/wallet"
            android:title="@string/nav_wallet" />

        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/invite"
            android:title="@string/nav_invite" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />


    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/FAQs"
                android:title="@string/FAQs" />
            <item
                android:id="@+id/Feedback"
                android:title="@string/Feedback" />


        </menu>
    </item>

</menu>
